tests/baselines/reference/extendsClauseAlreadySeen.errors.txt
==== tests/cases/compiler/extendsClauseAlreadySeen.ts (4 errors) ====
    class C {
    
    }
    class D extends C extends C {
                      ~~~~~~~
!!! error TS1005: '{' expected.
                                ~
!!! error TS1005: ';' expected.
        baz() { }
              ~
!!! error TS1005: ';' expected.
        ~~~
!!! error TS2304: Cannot find name 'baz'.
    }